Fix clipping in mobile displays

--- a/template/src/sass/components/_media.sass
+++ b/template/src/sass/components/_media.sass
@@ -369,6 +369,11 @@
 			h3
 				font-size: 18px
 
+	#top-nav
+		.logo-white
+			width: 95%
+			height: auto
+
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
